src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__invalid_variable_data_type_error_recovery.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token KeywordColon or KeywordComma
  ┌─ <internal>:4:18
  │
4 │                 a DINT : ;
  │                  ^ Missing expected Token KeywordColon or KeywordComma

error[E007]: Unexpected token: expected DataTypeDefinition but found KeywordSemicolon
  ┌─ <internal>:4:26
  │
4 │                 a DINT : ;
  │                          ^ Unexpected token: expected DataTypeDefinition but found KeywordSemicolon

error[E006]: Missing expected Token KeywordColon
  ┌─ <internal>:6:21
  │
6 │                 h , , : INT;
  │                     ^ Missing expected Token KeywordColon

error[E007]: Unexpected token: expected DataTypeDefinition but found KeywordComma
  ┌─ <internal>:6:21
  │
6 │                 h , , : INT;
  │                     ^ Unexpected token: expected DataTypeDefinition but found KeywordComma

error[E007]: Unexpected token: expected KeywordSemicolon but found ', : INT'
  ┌─ <internal>:6:21
  │
6 │                 h , , : INT;
  │                     ^^^^^^^ Unexpected token: expected KeywordSemicolon but found ', : INT'

error[E007]: Unexpected token: expected DataTypeDefinition but found KeywordSemicolon
  ┌─ <internal>:7:27
  │
7 │                 f , INT : ;
  │                           ^ Unexpected token: expected DataTypeDefinition but found KeywordSemicolon
